--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "jest": {
     "preset": "jest-expo"
   },
@@ -32,12 +39,12 @@
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
+    "lottie-ios": "3.2.3",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "react": "18.3.1",
@@ -45,6 +52,7 @@
     "react-native": "0.76.5",
     "react-native-awesome-slider": "^2.8.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -52,7 +60,8 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "expo-splash-screen": "~0.29.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
