--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "uuid": "^11.0.3",
-    "expo-splash-screen": "~0.29.18"
+    "expo-splash-screen": "~0.29.18",
+    "expo-audio": "~0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
