--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.23",
+    "expo-audio": "~0.3.1",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -61,8 +62,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "uuid": "^11.0.3",
-    "expo-splash-screen": "~0.29.18",
-    "expo-audio": "~0.3.1"
+    "expo-splash-screen": "~0.29.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
