--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "doctor": {
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
+      },
+      "autolinking": {
+        "exclude": [
+          "expo-splash-screen"
+        ]
       }
     }
   },
@@ -61,8 +66,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "uuid": "^11.0.3",
-    "expo-splash-screen": "~0.29.18"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
