--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
     ],
     "splash": {
       "image": "./assets/images/splash-icon.png",
-      "resizeMode": "cover",
+      "resizeMode": "contain",
       "backgroundColor": "#FFFFFF"
     },
     "extra": {
