--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "numeral": "^2.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-awesome-slider": "^2.8.0",
     "react-native-gesture-handler": "~2.20.2",
