--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.23",
-    "expo-audio": "~0.3.1",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -58,6 +57,8 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-awesome-slider": "^2.8.0",
+    "react-native-check-version": "^1.3.0",
+    "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-paper": "^5.12.5",
