--- a/app.json
+++ b/app.json
@@ -36,10 +36,17 @@
     },
     "plugins": [
       "expo-router",
-      "./plugins/withTranslucentSplashScreen",
       "./plugins/withGradleProperties",
-      "./plugins/withRes",
-      "./plugins/withMain"
+      ["expo-splash-screen",
+      {
+        "backgroundColor": "#FFFFFF",
+        "image": "./assets/images/splash-icon.png",
+        "dark": {
+          "image": "./assets/images/splash-icon-dark.png",
+          "backgroundColor": "#000000"
+        },
+        "imageWidth": 200
+      }]
     ],
     "splash": {
       "image": "./assets/images/splash-icon.png",
