--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
     "doctor": {
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
-      },
-      "autolinking": {
-        "exclude": [
-          "expo-splash-screen"
-        ]
       }
     }
   },
@@ -49,7 +44,6 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "lodash": "^4.17.21",
-    "lottie-ios": "3.2.3",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "react": "18.3.1",
@@ -60,7 +54,6 @@
     "react-native-check-version": "^1.3.0",
     "react-native-device-info": "^14.0.2",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-lottie-splash-screen": "^1.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -69,7 +62,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "uuid": "^11.0.3",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-splash-screen": "~0.29.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
