--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "expo": "~52.0.23",
+    "expo": "~52.0.24",
+    "expo-audio": "~0.3.2",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.15",
+    "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
@@ -49,7 +53,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-awesome-slider": "^2.8.0",
     "react-native-check-version": "^1.3.0",
     "react-native-device-info": "^14.0.2",
@@ -62,8 +66,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "uuid": "^11.0.3",
-    "yup": "^1.6.1",
-    "expo-splash-screen": "~0.29.18"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
